--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1646,3 +1646,17 @@ html {
     }
 }
 
+
+/* Link inline styles for addresses */
+.link-inline {
+    color: #000000 !important;
+    text-decoration: none;
+    font-weight: 500;
+    transition: all 0.3s ease;
+}
+
+.link-inline:hover {
+    color: #333333 !important;
+    text-decoration: underline;
+}
+
